# azure-functions-python-cookbook

./: .gitignore  404.html  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  PRD.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  index.html  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  question.yml  recipe_request.yml
.github/workflows/: ci-smoke.yml  ci-test.yml  docs.yml  release.yml  stale.yml
api/: index.html
architecture/: index.html
changelog/: index.html
concepts/deployment-patterns/: index.html
concepts/durable-functions-overview/: index.html
concepts/iac-snippets/: index.html
concepts/identity-based-connections/: index.html
concepts/python-v2-programming-model/: index.html
concepts/triggers-and-bindings-overview/: index.html
configuration/: index.html
contributing/: index.html
development/: index.html
docs/: agent-playbook.md  api.md  architecture.md  changelog.md  configuration.md  contributing.md  development.md  faq.md  getting-started.md  index.md  installation.md  recipes.md  release_process.md  roadmap.md  security.md  testing.md  troubleshooting.md  usage.md
docs/foundations/: index.md
docs/guides/: scaffold-quick-start.md  testing-patterns.md
docs/patterns/: index.md
docs/patterns/ai-and-agents/: ai-image-generation.md  durable-ai-pipeline.md  embedding-vector-search.md  index.md  langgraph-agent.md  langgraph-rag-agent.md  openai-direct-chat.md  rag-knowledge-api.md  streaming-ai-response.md
docs/patterns/apis-and-ingress/: apim-function-backend.md  bff-facade-api.md  full-stack-crud-api.md
docs/patterns/async-apis-and-jobs/: async-http-202-polling.md  callback-completion.md  queue-backed-job.md
docs/patterns/blob-and-file-triggers/: blob-csv-to-table.md  blob-thumbnail-generator.md
docs/patterns/data-and-pipelines/: cqrs-read-projection.md  db-input-output.md  etl-enrichment.md  file-processing-pipeline.md  sqlalchemy-rest-pagination.md
docs/recipes/: auth-easyauth-claims.md  auth-jwt-validation.md  auth-multitenant.md  github-webhook.md  http-api-basic.md  http-api-openapi.md  index.md  queue-worker.md  timer-job.md
docs/reference/: service-matrix.md
examples/: README.md  __init__.py
examples/github_webhook/: README.md  function_app.py
examples/http/auth_easyauth/: README.md  function_app.py  pyproject.toml
examples/http/auth_easyauth/app/functions/: auth.py
examples/http/auth_easyauth/app/services/: auth_service.py
examples/http/auth_easyauth/tests/: test_auth.py
examples/http/auth_jwt_validation/: README.md  function_app.py  local.settings.json.example  pyproject.toml
examples/http/auth_jwt_validation/app/core/: logging.py
examples/http/auth_jwt_validation/app/functions/: auth.py
examples/http/auth_jwt_validation/app/services/: jwt_service.py
examples/http/auth_jwt_validation/tests/: test_jwt.py
examples/http_api_basic/: README.md  __init__.py  function_app.py
examples/http_api_openapi/: README.md  __init__.py  function_app.py  requirements.txt
examples/local_run_and_direct_invoke/: README.md
examples/queue_worker/: README.md  __init__.py  function_app.py  host.json
examples/timer_job/: README.md  __init__.py  function_app.py
faq/: index.html
getting-started/: index.html
installation/: index.html
recipes/: auth-easyauth-claims.md  auth-jwt-validation.md  auth-multitenant.md  github-webhook.md  http-api-basic.md  http-api-openapi.md  index.html  queue-worker.md  timer-job.md
recipes/blob-eventgrid-trigger/: index.html
recipes/blob-upload-processor/: index.html
recipes/blueprint-modular-app/: index.html
recipes/change-feed-processor/: index.html
recipes/concurrency-tuning/: index.html
recipes/durable-determinism-gotchas/: index.html
recipes/durable-entity-counter/: index.html
recipes/durable-fan-out-fan-in/: index.html
recipes/durable-hello-sequence/: index.html
recipes/durable-human-interaction/: index.html
recipes/durable-retry-pattern/: index.html
recipes/durable-unit-testing/: index.html
recipes/eventhub-consumer/: index.html
recipes/github-webhook/: index.html
recipes/hello-http-minimal/: index.html
recipes/host-json-tuning/: index.html
recipes/http-api-basic/: index.html
recipes/http-api-openapi/: index.html
recipes/http-auth-levels/: index.html
recipes/http-routing-query-body/: index.html
recipes/local-run-and-direct-invoke/: index.html
recipes/managed-identity-servicebus/: index.html
recipes/managed-identity-storage/: index.html
recipes/mcp-server-example/: index.html
recipes/output-binding-vs-sdk/: index.html
recipes/queue-consumer/: index.html
recipes/queue-producer/: index.html
recipes/queue-worker/: index.html
recipes/retry-and-idempotency/: index.html
recipes/servicebus-worker/: index.html
recipes/timer-cron-job/: index.html
recipes/timer-job/: index.html
recipes/webhook-github/: index.html
roadmap/: index.html
search/: search_index.json
security/: index.html
src/azure_functions_python_cookbook/: __init__.py
testing/: index.html
tests/: test_examples.py  test_public_api.py  test_version.py
tests/e2e/: conftest.py  test_blob_examples.py  test_durable_examples.py  test_http_examples.py  test_queue_examples.py  test_smoke_examples.py
troubleshooting/: index.html
usage/: index.html
(+204 files in other folders)
